Fixed layout bug. Output table was preventing clicking of checkboxes to the left.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,10 @@ p {  margin-top: 0em; margin-bottom: 0em; }
 #output {
 	font-family: sans-serif;
 	font-size: 14px;
+*	position:relative;
+*	float:none;
+	width:auto;
+	height:auto;
 }
 
 table.stats {
@@ -91,11 +95,6 @@ td.stats {
 
 
 
-input.checkbox{
-	display:block;
-	margin:2px;
-}
-
 td{
 	padding:1px;
 }
@@ -108,12 +107,6 @@ fieldset{
 	margin:5px;
 }
 
-#output{
-	position:relative;
-*	float:right;
-	width:100%;
-	height:100%;
-}
 
 
 
